--- a/webroot/css/listar.css
+++ b/webroot/css/listar.css
@@ -12,7 +12,7 @@
 .modal-header {
     background: #FFF;
     padding: 10px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgb(4, 66, 46);
     margin-bottom: 20px;
 }
 
@@ -20,9 +20,22 @@
     position: relative;
     display: inline-block;
     width: 500px;
-    border: 1px solid #000;
+    border: 1px solid rgb(3, 56, 25);
     z-index: 999;
-    background: #FFF;
+    background: rgb(255, 255, 255);
     padding: 10px;
     text-align: left;
+}
+
+#modal-fechar {
+    margin-left: 80%;
+    text-align: right;
+    color: red;
+}
+
+.modal-footer{
+    background: #FFF;
+    padding: 20px;
+    border-bottom: 1px solid rgb(4, 66, 46);
+    margin-bottom: 20px; 
 }
